# hmailfilter

./: .gitignore  .travis.yml  Dockerfile  README.md  TAGS  cabal.config.ghc710  hmailfilter.cabal  mail-utils.cabal  procmailrc  stack.yaml
.github/workflows/: build.yml  release.yml
app/: Classifier.hs
deploy/: server.yml
deploy/config/: procmailrc  purgemailbox@.service  purgemailbox@.timer
src/: Filter.hs  Main.hs  Parser.hs  Rule.hs
test/: Main.hs  Spec.hs
